--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,4 @@ services:
     env: python
     plan: free
     buildCommand: ""
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port ${PORT}
+    startCommand: ./start.sh
